editor cleanups. Little borders stay visible during operations, same modification greatly optimized moving selected apps. Fixed click and drag events bubbling to default behavior and selecting controls. Made apps that are behind rectangles and path apps clickable when visible using pointer-events.

--- a/libsrc/scss/edit.scss
+++ b/libsrc/scss/edit.scss
@@ -76,8 +76,7 @@ body.edit {
 }
 #happs {
     position: absolute;
-    left: 0;
-    top: 0;
+    left: 0; top: 0; right:0; bottom: 0;
     z-index: 3;
 }
 
@@ -138,7 +137,9 @@ body.edit {
     font-size: 32px;
     font-weight: 700;
 }
-.ehapp, .ehapp > * { position : absolute; }
+.ehapp, .ehapp > * {
+    position : absolute;
+}
 // .ehapp { @include box-sizing( border-box ); }
 .ehapp .highlight {
     width: 100%;
@@ -171,7 +172,20 @@ body.edit {
 
 .content { z-index : 2 }
 /* it would be nice to make all .content 100%x100%, but that distorts new images */
-.content.rectangle { width : 100%; height : 100%; }
+.ehapp.rectangle {
+    pointer-events: none;
+    .content {
+        width : 100%; height : 100%;
+        pointer-events: visible;
+    }
+}
+.ehapp.path {
+    pointer-events: none;
+    .content {
+        width : 100%; height : 100%;
+        * { pointer-events: visible }
+    }
+}
 .content.sketch { width : 100%; height : 100%; } 
 .content.code {
     width: 100%; height: 100%;
